--- a/tarea/css/style.css
+++ b/tarea/css/style.css
@@ -11,6 +11,8 @@ body{
     padding: 0;
     margin: 0;
 
+    background-image: url("../assets/images/earth_tiny.jpg");
+    background-size: cover;
     background-color: #7C7A7A;
 }
 
@@ -24,22 +26,39 @@ body{
     text-align: center;
 }
 
+.text-shadow{
+    text-shadow: 1px 1px #00000040;
+}
+
+.main-img{
+    background-size: cover;
+    border-radius: 20px;
+    box-shadow: 2px 2px #00000060;
+}
+
+.top-margin-50{
+    margin-top: 50px;
+}
+.top-margin-100{
+    margin-top: 100px;
+}
+
 #wrapper{
     width: 90%;
-    margin: 0 auto;
+    max-width: 1080px;
+    margin: 10px auto;
     margin-top: 20px;
 
     background-color: white;
 
     border-radius: 10px;
-
 }
 
 #banner{
-    background-color: #00ABE7;
+    background-color: #15556F;
     color: white;
     margin-bottom: 10px;
-    padding: 10px 30px;
+    padding: 10px 10px;
 
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
@@ -81,4 +100,16 @@ body{
     float: right;
     width: 20%;
     padding: 10px;
+}
+
+@media screen and (max-width: 1024px) {
+    #left-column {
+        display: none;
+    }
+    #right-column {
+        display: none;
+    }
+    #content{
+        width: 100%;
+    }
 }
